--- a/MauiApp1/Views/Flex.xaml
+++ b/MauiApp1/Views/Flex.xaml
@@ -3,16 +3,23 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiApp1.Flex"
              Title="Flex">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <FlexLayout Direction="Column"
+                AlignItems="Center"
+                Wrap="Wrap"
+                JustifyContent="SpaceEvenly">
+        <Button Text="Boton1" 
+                Width="100" Height="50"/>
+        <Button Text="Boton2" 
+                Width="100" Height="50"/>
+        <Button Text="Boton3"
+                Width="100" Height="50"/>
+        <Button Text="Boton4"
+                Width="100" Height="50"/>
         <Button
-            Text="Ir a Absolute"
+            Text="Ir a FlexLayout"
             VerticalOptions="Center" 
             HorizontalOptions="Center" 
             Clicked="Button_Clicked"
-        />
-    </VerticalStackLayout>
+            />
+    </FlexLayout>
 </ContentPage>
