--- a/MauiApp1/Views/Absolute.xaml
+++ b/MauiApp1/Views/Absolute.xaml
@@ -3,10 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiApp1.Absolute"
              Title="Absolute">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <AbsoluteLayout Margin="20">
+        <Image Source="jotchua.jpg"
+               AbsoluteLayout.LayoutBounds="0.5,0"
+               AbsoluteLayout.LayoutFlags="PositionProportional"/>
+        <Button Text="Ir a Grid"
+                AbsoluteLayout.LayoutBounds="1,1"
+                AbsoluteLayout.LayoutFlags="PositionProportional"
+                Clicked="Button_Clicked"
+                />
+    </AbsoluteLayout>
 </ContentPage>
